--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ log
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+ad_event.txt
+ad_insert.txt
