Removed annoying LaTeX files

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@ ad_event.txt
 ad_insert.txt
 scripts/output.txt
 /bin1/
+
+# Annoying LaTeX files
+*.log
+*.aux
+*.synctex.gz
+*.out
+*.nav
+*.snm
+*.toc
+*.pdf
